styles/main.css
html {
  font-family: 'Oswald', sans-serif;
}

body {
  font-size: 100%;
  font-family: Montserrat, "Oswald", Helvetica, Arial, sans-serif;
  box-sizing: border-box;

}

p {
  font-family: "Oswald", Helvetica, Arial, sans-serif;
  font-weight: lighter;
  color: #2d2d2d;
}

/* TODO: size images manually so this is not necessary */
img {
  max-width: 100%;
  height: auto;
}

/***************** NAV *****************/

nav a:hover {
  text-decoration: none;
  color: black;
}

nav {
  border: 1px solid black;
  margin-bottom: 0.5rem;
  display: inline-flex;
  width: 100%;
  background-color: #4E77C7;
}



ul {
  display: flex;
  flex-flow; row wrap;
  justify-content: flex-start;
  padding: 0.8rem;
  align-items: center;
}

@media (max-width: 450px) {
  ul {
    flex-direction: column;
    width: 100%;
    text-align: center;
    align-items: center;
  }

  ul li {
    display: block;
    border-bottom: 1px dashed white;
    width: 100%;
    padding: 0.5rem;
  }

  form.search {
    display: flex;
    justify-content: center;
  }
}

i {
  color: white;
  margin-left: 1rem;
}

i:hover {
  color: black;
}

i.searchicon:hover {
  color: white;
}

a {
  color: white;
  margin-left: 1rem;
}

/**************** HERO *****************/
.logo {
  display: flex;
  flex-direction: row;
  align-items: center;
}

header img {
  max-height: 6rem;
  max-width: 3rem;
  margin-right: 2rem;
}

h1 {
  color: #4E77C7;
  font-size: 2rem;
}

h1 .logo-w {
  font-size: 3.5rem;
}

@media (max-width: 445px) {
  h1 {
    padding: 1rem;
  }
}
/**************** ASIDE ****************/

form {
  max-width: 98%;
  text-align: center;
}

form.addtocart {
  display: flex;
  flex-wrap: wrap;
  justify-content: center;
}

@media (max-width: 955px) {
  form {
    width: 100%;
  }
}

label.radio {
  color: black;
  font-size: 0.8rem;
}

input[type="submit"] {
  padding: .25rem;
  background-color: #3D7FCF;
  border: 1px solid #3D7FCF;
  border-radius: 5px;
  font-size: .75rem;
  color: white;
}

input[type=email] {
  color: black;
}

input[type=email]:focus {
  border: 2px solid #3D7FCF;
}

aside {
  display: block;
  background-color: black;
  text-align: center;
  margin-top: 0.5rem;
  padding-left: 0;
  flex-wrap: wrap;
}

form > label {
  font-size: 1rem;
  color: white;
  margin: 1rem;
  text-align: center;

}

form.search {
  display: flex;
  flex-direction: row;
  align-items: center;
}

form.email {
  padding-top: 1rem;
  padding-bottom: 1rem;
  overflow: hidden;
}

input.email {
  margin-top: 0.5rem;
}

input.search {
  margin-left: 0.7rem;
}

.submit {
  margin: 1rem;
}

/*********** PRODUCTS SECTION ***********/
main {
  display: flex;
  flex-direction: row;
}

section > h1 {
  font-size: 2rem;
  color: black;
  text-align: center;
  margin-bottom: 1rem;
  border-bottom: 1px solid black;
  padding-bottom: 1rem;
}

.products {
  display: flex;
  flex-flow: row wrap;
  justify-content: center;
}

.item {
  display: flex;
  flex-flow: column wrap;
  justify-content: space-around;
  margin-left: 1.5rem;
  flex-grow: 1;
  border: 1px solid black;
  max-width: 30%;
  text-align: center;
  margin: 1rem;
  height: 100%;
}

@media (max-width: 400px) {
  .item {
    max-width: 185px;
  }
}


img {
  max-width: 100%;
}

section {
  padding: 0.75rem;
}

h2 {
  padding-top: 1.5rem;
  font-size: 2rem;
  text-align: center;
  color: #2d2d2d;
}

h3 {
  font-size: 1.2rem;
  text-align: center;
  color: #2d2d2d;
}

.item * {
  margin: 0.5rem;
}

